Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
Can result in hang or crash
Description
Assertion found while testing MDEV-28730
|
origin/main-MDEV-28730 a9665958948732b39b5a71f2b66672a97883837b |
# 2026-05-15T14:31:14 [457469] | mariadbd: /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:778: dberr_t fts_optimize_encode_node(fts_node_t*, doc_id_t, fts_encode_t*): Assertion `doc_id > node->last_doc_id' failed.
|
|
Stacktrace |
# 2026-05-15T14:33:39 [457469] | #0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
# 2026-05-15T14:33:39 [457469] | #1 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
|
# 2026-05-15T14:33:39 [457469] | #2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
|
# 2026-05-15T14:33:39 [457469] | #3 0x000077fc3144526e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
|
# 2026-05-15T14:33:39 [457469] | #4 0x000077fc314288ff in __GI_abort () at ./stdlib/abort.c:79
|
# 2026-05-15T14:33:39 [457469] | #5 0x000077fc3142881b in __assert_fail_base (fmt=0x77fc315d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x57efd4e609a2 "doc_id > node->last_doc_id", file=file@entry=0x57efd4de17d0 "/data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc", line=line@entry=778, function=function@entry=0x57efd4de1a38 "dberr_t fts_optimize_encode_node(fts_node_t*, doc_id_t, fts_encode_t*)") at ./assert/assert.c:94
|
# 2026-05-15T14:33:39 [457469] | #6 0x000077fc3143b507 in __assert_fail (assertion=0x57efd4e609a2 "doc_id > node->last_doc_id", file=0x57efd4de17d0 "/data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc", line=778, function=0x57efd4de1a38 "dberr_t fts_optimize_encode_node(fts_node_t*, doc_id_t, fts_encode_t*)") at ./assert/assert.c:103
|
# 2026-05-15T14:33:39 [457469] | #7 0x000057efd4aa4837 in fts_optimize_encode_node (node=node@entry=0x6ffc042f70f0, doc_id=doc_id@entry=302, enc=enc@entry=0x77fc300c5000) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:778
|
# 2026-05-15T14:33:39 [457469] | #8 0x000057efd4aa4aa4 in fts_optimize_node (del_vec=del_vec@entry=0x6ffbf08ceb18, del_pos=del_pos@entry=0x77fc300c4ffc, dst_node=dst_node@entry=0x6ffc042f70f0, src_node=src_node@entry=0x6ffc04067460, enc=enc@entry=0x77fc300c5000) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:921
|
# 2026-05-15T14:33:39 [457469] | #9 0x000057efd4aa4db4 in fts_optimize_word (optim=optim@entry=0x6ffc04e306b8, word=word@entry=0x6ffc0402ee78) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:1024
|
# 2026-05-15T14:33:39 [457469] | #10 0x000057efd4aa4ee8 in fts_optimize_compact (executor=executor@entry=0x77fc300c5320, optim=optim@entry=0x6ffc04e306b8, index=index@entry=0x6ffbf06c8048, start_time=start_time@entry=1778880669) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:1154
|
# 2026-05-15T14:33:39 [457469] | #11 0x000057efd4aa666f in fts_optimize_words (executor=executor@entry=0x77fc300c5320, optim=optim@entry=0x6ffc04e306b8, index=index@entry=0x6ffbf06c8048, word=word@entry=0x77fc300c5120) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:1333
|
# 2026-05-15T14:33:39 [457469] | #12 0x000057efd4aa6807 in fts_optimize_index (executor=executor@entry=0x77fc300c5320, optim=optim@entry=0x6ffc04e306b8, index=index@entry=0x6ffbf06c8048) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:1491
|
# 2026-05-15T14:33:39 [457469] | #13 0x000057efd4aa699b in fts_optimize_indexes (executor=executor@entry=0x77fc300c5320, optim=optim@entry=0x6ffc04e306b8) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:1665
|
# 2026-05-15T14:33:39 [457469] | #14 0x000057efd4aa6c2c in fts_optimize_table (table=<optimized out>, thd=thd@entry=0x6ffc0400f6e8) at /data/Server/MDEV-28730_1/storage/innobase/fts/fts0opt.cc:1847
|
# 2026-05-15T14:33:39 [457469] | #15 0x000057efd47d214b in ha_innobase::optimize (this=0x6ffbf407abd0, thd=0x6ffc0400f6e8) at /data/Server/MDEV-28730_1/storage/innobase/handler/ha_innodb.cc:15339
|
# 2026-05-15T14:33:39 [457469] | #16 0x000057efd4552d1a in handler::ha_optimize (this=0x6ffbf407abd0, thd=thd@entry=0x6ffc0400f6e8, check_opt=check_opt@entry=0x6ffc04014fc0) at /data/Server/MDEV-28730_1/sql/handler.cc:5884
|
# 2026-05-15T14:33:39 [457469] | #17 0x000057efd43b89f9 in mysql_admin_table (thd=thd@entry=0x6ffc0400f6e8, tables=tables@entry=0x6ffc04022238, check_opt=check_opt@entry=0x6ffc04014fc0, operator_name=operator_name@entry=0x57efd5571980 <msg_optimize>, lock_type=lock_type@entry=TL_WRITE, org_open_for_modify=org_open_for_modify@entry=true, no_errors_from_open=false, extra_open_options=0, prepare_func=0x0, operator_func=<optimized out>, view_operator_func=0x0, is_cmd_replicated=true) at /data/Server/MDEV-28730_1/sql/sql_admin.cc:949
|
# 2026-05-15T14:33:39 [457469] | #18 0x000057efd43ba77e in Sql_cmd_optimize_table::execute (this=<optimized out>, thd=0x6ffc0400f6e8) at /data/Server/MDEV-28730_1/sql/sql_admin.cc:1730
|
# 2026-05-15T14:33:39 [457469] | #19 0x000057efd4246d94 in mysql_execute_command (thd=thd@entry=0x6ffc0400f6e8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/Server/MDEV-28730_1/sql/sql_parse.cc:5902
|
# 2026-05-15T14:33:39 [457469] | #20 0x000057efd4247979 in mysql_parse (thd=thd@entry=0x6ffc0400f6e8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x77fc300c63c0) at /data/Server/MDEV-28730_1/sql/sql_parse.cc:7942
|
# 2026-05-15T14:33:39 [457469] | #21 0x000057efd4248fcd in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x6ffc0400f6e8, packet=packet@entry=0x6ffc04017ac9 "", packet_length=packet_length@entry=82, blocking=blocking@entry=true) at /data/Server/MDEV-28730_1/sql/sql_parse.cc:1898
|
# 2026-05-15T14:33:39 [457469] | #22 0x000057efd424a5d2 in do_command (thd=thd@entry=0x6ffc0400f6e8, blocking=blocking@entry=true) at /data/Server/MDEV-28730_1/sql/sql_parse.cc:1432
|
# 2026-05-15T14:33:39 [457469] | #23 0x000057efd43a359d in do_handle_one_connection (connect=<optimized out>, connect@entry=0x57efd7f679d8, put_in_cache=put_in_cache@entry=true) at /data/Server/MDEV-28730_1/sql/sql_connect.cc:1503
|
# 2026-05-15T14:33:39 [457469] | #24 0x000057efd43a37ba in handle_one_connection (arg=0x57efd7f679d8) at /data/Server/MDEV-28730_1/sql/sql_connect.cc:1415
|
# 2026-05-15T14:33:39 [457469] | #25 0x000077fc3149ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
|
# 2026-05-15T14:33:39 [457469] | #26 0x000077fc31529a34 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
|
|
RQG startup otions used |
# $RQG_HOME/rqg.pl \
|
# --gendata=conf/engines/innodb/full_text_search.zz \
|
# --max_gd_duration=1200 \
|
# --short_column_names \
|
# --grammar=conf/engines/innodb/full_text_search.yy \
|
# --redefine=conf/mariadb/redefine_fts.yy \
|
# --mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
|
# --mysqld=--loose-idle_write_transaction_timeout=0 \
|
# --mysqld=--loose-idle_transaction_timeout=0 \
|
# --mysqld=--loose-idle_readonly_transaction_timeout=0 \
|
# --mysqld=--connect_timeout=60 \
|
# --mysqld=--interactive_timeout=28800 \
|
# --mysqld=--slave_net_timeout=60 \
|
# --mysqld=--net_read_timeout=30 \
|
# --mysqld=--net_write_timeout=60 \
|
# --mysqld=--loose-table_lock_wait_timeout=50 \
|
# --mysqld=--wait_timeout=28800 \
|
# --no_mask \
|
# --queries=10000000 \
|
# --seed=random \
|
# --reporters=None \
|
# --reporters=ErrorLog \
|
# --reporters=Deadlock \
|
# --validators=None \
|
# --mysqld=--log_output=none \
|
# --mysqld=--log_bin_trust_function_creators=1 \
|
# --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
|
# --engine=InnoDB \
|
# --restart_timeout=240 \
|
# --mysqld=--plugin-load-add=file_key_management.so \
|
# --mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
|
# --mysqld=--plugin-load-add=provider_lzo.so \
|
# --mysqld=--plugin-load-add=provider_bzip2.so \
|
# --mysqld=--plugin-load-add=provider_lzma.so \
|
# --mysqld=--plugin-load-add=provider_snappy.so \
|
# --mysqld=--plugin-load-add=provider_lz4.so \
|
# --mysqld=--loose-innodb_compression_level=1 \
|
# --duration=300 \
|
# --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=300 \
|
# --mysqld=--loose-innodb_data_file_path=ibdata1:1M:autoextend:autoshrink \
|
# --redefine=conf/mariadb/redefine_innodb_log_size_dynamic.yy \
|
# --mysqld=--lock-wait-timeout=86400 \
|
# --mysqld=--innodb-lock-wait-timeout=50 \
|
# --mysqld=--loose-innodb_fast_shutdown=0 \
|
# --mysqld=--sql_mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION \
|
# --mysqld=--innodb_file_per_table=1 \
|
# --mysqld=--loose-innodb_read_only_compressed=OFF \
|
# --mysqld=--innodb_stats_persistent=off \
|
# --mysqld=--innodb_adaptive_hash_index=off \
|
# --mysqld=--innodb_random_read_ahead=ON \
|
# --mysqld=--innodb_read_ahead_threshold=0 \
|
# --mysqld=--innodb_log_buffer_size=2M \
|
# --mysqld=--log-bin \
|
# --mysqld=--sync-binlog=1 \
|
# --mysqld=--loose-innodb_evict_tables_on_commit_debug=off \
|
# --mysqld=--loose-max-statement-time=30 \
|
# --threads=2 \
|
# --rr=rr record --wait \
|
# --mysqld=--innodb_undo_log_truncate=ON \
|
# --mysqld=--innodb_undo_tablespaces=16 \
|
# --mysqld=--innodb_rollback_on_timeout=OFF \
|
# --mysqld=--innodb_page_size=64K \
|
# --mysqld=--innodb-buffer-pool-size=256M \
|
# --vardir_type=fast \
|
# --mysqld=--loose-innodb_ft_enable_stopword=0 \
|
# --no_mask \
|
# --batch \
|
# --basedir1=/Server_bin/MDEV-28730_1_debug_Og \
|
# --basedir2=/Server_bin/MDEV-28730_1_debug_Og \
|
# --script_debug=_nix_ \
|
# --major_runid=1778871863 \
|
# --minor_runid=93
|
RR trace is present on SDP:-
/data/results/1778871863/MDEV-28730_04
Attachments
Issue Links
- is caused by
-
MDEV-28730 Remove internal parser usage from InnoDB fts
-
- Closed
-
- relates to
-
MDEV-40804 Interrupted CREATE TABLE with a FULLTEXT index leaves use_stopword empty and stopwords off
-
- Open
-