MDEV-39642 InnoDB FTS: Assertion `doc_id > node->last_doc_id' failed in fts_optimize_encode_node during OPTIMIZE TABLE

fts_optimize_word() could crash with assertion "doc_id > node->last_doc_id"
when source nodes have equal boundary doc_ids.

fts_optimize_word():  Changed condition from '>' to '>=' to
handle legitimate overlapping ranges that occur when nodes
fill to FTS_ILIST_MAX_SIZE at doc_id boundaries.